--- a/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
+++ b/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
@@ -27,3 +27,8 @@
 "url_perm_subtitle" = "这个胶囊想要访问elastOS外部的一个地址。 您同意吗?";
 "url_perm_capsule" = "胶囊:";
 "url_perm_address" = "地址:";
+
+"intent_choose_title" = "打开方式:";
+"intent_choose_another" = "其它应用";
+
+"app_starting" = "正在启动";
