update translation of notification

--- a/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
+++ b/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
@@ -35,3 +35,10 @@
 "cancel" = "取消";
 
 "app_starting" = "正在启动";
+
+"notification_name_was_added_new" = "刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。";
+"notification_someone_was_added_new" = "有人刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。";
+"notification_name_want_add" = "想将您添加为联系人。 轻触以查看更多详细信息。";
+"notification_someone_want_add" = "有人想将您添加为联系人。 轻触以查看更多详细信息。";
+"notification_name_accept_invitation" = "已接受您的邀请。 触摸以查看详细信息。";
+"notification_someone_accept_invitation" = "您的朋友已接受您的邀请。 触摸以查看详细信息。";
