--- a/platform_res/ios/elastOS/Strings/en.lproj/Localizable.strings
+++ b/platform_res/ios/elastOS/Strings/en.lproj/Localizable.strings
@@ -35,3 +35,10 @@
 "cancel" = "Cancel";
 
 "app_starting" = "Starting";
+
+"notification_name_was_added_new" = " was just added as a new contact. Touch to view his/her profile.";
+"notification_someone_was_added_new" = "Someone was just added as a new contact. Touch to view his/her profile.";
+"notification_name_want_add" = " wants to add you as a contact. Touch to view more details.";
+"notification_someone_want_add" = "Someone wants to add you as a contact. Touch to view more details.";
+"notification_name_accept_invitation" = " has accepted your invitation. Touch to view details.";
+"notification_someone_accept_invitation" = "Your friend has accepted your invitation. Touch to view details.";
