--- a/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
+++ b/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
@@ -36,6 +36,9 @@
 
 "app_starting" = "正在启动";
 
+"notification_contact_added" = "联系人已添加";
+"notification_contact_request" = "联系人请求";
+"notification_contact_invitation_accepted" = "联系人邀请已接受";
 "notification_name_was_added_new" = "刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。";
 "notification_someone_was_added_new" = "有人刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。";
 "notification_name_want_add" = "想将您添加为联系人。 轻触以查看更多详细信息。";
