--- a/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
+++ b/platform_res/ios/elastOS/Strings/zh.lproj/Localizable.strings
@@ -38,10 +38,10 @@
 
 "notification_contact_added" = "联系人已添加";
 "notification_contact_request" = "联系人请求";
-"notification_contact_invitation_accepted" = "联系人邀请已接受";
-"notification_name_was_added_new" = "刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。";
-"notification_someone_was_added_new" = "有人刚刚被添加为新联系人。 触摸即可查看他/她的个人资料。";
-"notification_name_want_add" = "想将您添加为联系人。 轻触以查看更多详细信息。";
-"notification_someone_want_add" = "有人想将您添加为联系人。 轻触以查看更多详细信息。";
-"notification_name_accept_invitation" = "已接受您的邀请。 触摸以查看详细信息。";
-"notification_someone_accept_invitation" = "您的朋友已接受您的邀请。 触摸以查看详细信息。";
+"notification_contact_invitation_accepted" = "添加联系人邀请已被接受";
+"notification_name_was_added_new" = "刚刚被添加为新联系人。 点击可查看他/她的个人资料。";
+"notification_someone_was_added_new" = "有新的联系人。 点击可查看他/她的个人资料。";
+"notification_name_want_add" = "想添加您为联系人。 点击可查看更多详细信息。";
+"notification_someone_want_add" = "有人想添加您为联系人。 点击可查看更多详细信息。";
+"notification_name_accept_invitation" = "接受了您的邀请。 点击可查看详细信息。";
+"notification_someone_accept_invitation" = "您的朋友接受了您的邀请。 点击可查看详细信息。";
